--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "db:push": "turbo -F @ticket-concurrency-challenge/db db:push",
     "db:studio": "turbo -F @ticket-concurrency-challenge/db db:studio",
     "db:generate": "turbo -F @ticket-concurrency-challenge/db db:generate",
-    "db:migrate": "turbo -F @ticket-concurrency-challenge/db db:migrate"
+    "db:migrate": "turbo -F @ticket-concurrency-challenge/db db:migrate",
+    "db:seed": "turbo -F @ticket-concurrency-challenge/db db:seed"
   },
   "dependencies": {
     "dotenv": "^17.2.2",
