--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -13,7 +13,8 @@
     "db:push": "drizzle-kit push",
     "db:generate": "drizzle-kit generate",
     "db:studio": "drizzle-kit studio",
-    "db:migrate": "drizzle-kit migrate"
+    "db:migrate": "drizzle-kit migrate",
+    "db:seed": "npx tsx src/seed.ts"
   },
   "devDependencies": {
     "@ticket-concurrency-challenge/config": "*",
