--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "zod": "^4.1.13"
   },
   "devDependencies": {
-    "turbo": "^2.6.3",
     "@biomejs/biome": "2.3.10",
-    "ultracite": "6.5.0",
-    "oxlint": "^1.34.0",
+    "@types/node": "^22.13.11",
     "oxfmt": "^0.19.0",
+    "oxlint": "^1.34.0",
+    "turbo": "^2.7.3",
     "typescript": "^5",
-    "@types/node": "^22.13.11"
+    "ultracite": "6.5.0"
   },
   "packageManager": "npm@11.6.2"
 }
